修复bug及适应新版本dom

--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -6,6 +6,7 @@
   text-align: center;
   justify-content: center;
   line-height: 22px;
+  border-radius: $rc-border-radius-extra-small;
   &:hover {
     background-color: $rc-theme-list-button;
   }
