--- a/src/styles/components/editor/_tag.scss
+++ b/src/styles/components/editor/_tag.scss
@@ -1,23 +1,29 @@
 //标签
 span[data-type="tag"]:not(.dock__item) {
 //   font-weight: bold;
-  border-radius: $rc-border-radius-small;
+  border-radius: $rc-border-radius-max;
   color: $rc-inline-tag-color;
-  border: none !important;
+  border: 1px solid $rc-theme-border-2 !important;
   position: relative;
-  padding-right: 12px;
+  padding: 0.1em 0.6em;
+  font-size: 85%;
+  // padding-right: 12px;
   // background-color: $rc-inline-tag-background;
   // border-color: rgba($rc-inline-tag-color, 0.2) !important;
   &:hover {
     background-color: $rc-inline-tag-hover !important;
   }
-  &::after {
-    content: "";
+  &::before{
+    content: "#";
     display: inline-block;
-    position: absolute;
-    top: 2px;
-    width: 12px;
-    height: 12px;
-    @include add_icon("search", $rc-inline-tag-color, 18, "round");
   }
+  // &::after {
+  //   content: "";
+  //   display: inline-block;
+  //   position: absolute;
+  //   top: 2px;
+  //   width: 12px;
+  //   height: 12px;
+  //   @include add_icon("search", $rc-inline-tag-color, 18, "round");
+  // }
 }
