--- a/src/styles/components/surface/_input.scss
+++ b/src/styles/components/surface/_input.scss
@@ -1,11 +1,12 @@
 //输入框
 .b3-text-filed {
-  border: 1px solid $rc-theme-border-2 !important;
+  border: 1px solid transparent !important;
   border-radius: $rc-border-radius-small;
   &.b3-text-filed--small {
     height: 24px;
   }
-  &:not(.b3-text-filed--small):not(.b3-text-filed--text) {//:not(.b3-form__icon-input)
+  &:not(.b3-text-filed--small):not(.b3-text-filed--text) {
+    //:not(.b3-form__icon-input)
     background-color: $rc-theme-surface-control;
   }
   .b3-list-item > & {
@@ -16,12 +17,16 @@
     box-shadow: none;
     border: 1px solid $rc-theme-border-2 !important;
   }
-//   &:not(.b3-form__icon-input):focus {
-//     box-shadow: none;
-//     border: 1px solid $rc-theme-primary-5 !important;
-//   }
-//   &.b3-form__icon-input:focus {
-//     box-shadow: none;
-//     border: 1px solid $rc-border-color !important;
-//   }
+  // &:focus {
+  //   box-shadow: 0 0 0 2px $rc-theme-gray-1;
+  // }
+
+  //   &:not(.b3-form__icon-input):focus {
+  //     box-shadow: none;
+  //     border: 1px solid $rc-theme-primary-5 !important;
+  //   }
+  //   &.b3-form__icon-input:focus {
+  //     box-shadow: none;
+  //     border: 1px solid $rc-border-color !important;
+  //   }
 }
