适应新的选择器
filed -> field

--- a/src/styles/components/surface/_block-icons.scss
+++ b/src/styles/components/surface/_block-icons.scss
@@ -26,7 +26,7 @@
   .b3-form__icon-icon {
     padding-top: 1px;
   }
-  .b3-text-filed {
+  .b3-text-field {
     border: transparent !important;
     // &:focus{
     //   border: 1px solid $rc-border-color;
