--- a/src/styles/components/surface/_dialog.scss
+++ b/src/styles/components/surface/_dialog.scss
@@ -14,7 +14,7 @@
   .b3-dialog__close {
     display: none;
   }
-  .b3-text-filed.b3-text-filed--text {
+  .b3-text-field.b3-text-field--text {
     border-top-left-radius: $rc-dialog-radius;
     border-top-right-radius: $rc-dialog-radius;
     background-color: $rc-theme-surface-background;
@@ -158,7 +158,7 @@
         @include block__icon__model(28px, 10px);
       }
       .ft__on-surface,
-      .b3-text-filed[placeholder="属性名"] {
+      .b3-text-field[placeholder="属性名"] {
         font-size: 15px;
         width: 80px !important;
         text-align: center !important;
@@ -181,7 +181,7 @@
         }
       }
     }
-    .b3-text-filed {
+    .b3-text-field {
       background-color: $rc-theme-surface-control;
       border: 1px solid $rc-border-color;
       height: 40px;
@@ -246,7 +246,7 @@
 
 .search__header {
   border-radius: $rc-border-radius-large;
-  .b3-text-filed {
+  .b3-text-field {
     border: 1px solid $rc-border-color !important;
     &:hover,
     &:focus {
