--- a/src/styles/components/surface/_input.scss
+++ b/src/styles/components/surface/_input.scss
@@ -1,11 +1,11 @@
 //输入框
-.b3-text-filed {
+.b3-text-field {
   border: 1px solid transparent !important;
   border-radius: $rc-border-radius-small;
-  &.b3-text-filed--small {
+  &.b3-text-field--small {
     height: 24px;
   }
-  &:not(.b3-text-filed--small):not(.b3-text-filed--text) {
+  &:not(.b3-text-field--small):not(.b3-text-field--text) {
     //:not(.b3-form__icon-input)
     background-color: $rc-theme-surface-control;
   }
