--- a/src/styles/components/surface/_menu.scss
+++ b/src/styles/components/surface/_menu.scss
@@ -20,6 +20,14 @@
       }
     }
   }
+  // &.fn__none{
+  //   display: block !important;
+  //   opacity: 0;
+  //   transform: scale(0.95);
+  //   padding: 0;
+  // }
+  // transform: scale(1);
+  // transition: transform 0.1s ease-out;
 }
 
 //菜单
