--- a/src/styles/components/surface/_dialog.scss
+++ b/src/styles/components/surface/_dialog.scss
@@ -49,6 +49,12 @@
     //账号
     .b3-form__space.config-account__center {
       border-right: 1px solid $rc-border-color;
+      #agreeLogin + span + span {
+        line-height: 22px;
+      }
+      .b3-button.b3-button--cancel{
+        color: $rc-theme-primary-5;
+      }
     }
     //集市tab
     .layout-tab-bar {
@@ -56,7 +62,7 @@
       .item {
         padding: 6px 0px !important;
         margin-right: 8px;
-        font-weight: normal !important;        
+        font-weight: normal !important;
       }
     }
 
@@ -72,6 +78,8 @@
       transition: all 300ms cubic-bezier(0.2, 0.91, 0.85, 0.96) 0s;
       &:hover {
         box-shadow: #{$rc-card-hover-shadow};
+        background-color: $rc-theme-surface-background;
+        transform: translateY(-2px);
       }
       .b3-card__img {
         // margin: 12px 16px 8px 16px;
@@ -86,19 +94,26 @@
         }
       }
       .b3-card__info {
-        // padding: 8px 24px;
+        padding: 8px 16px 0;
         a:last-child > *:last-child {
           transform: translateY(1px);
         }
       }
       .b3-card__actions {
         // width: 204px;
+        height: 44px;
         padding: 8px;
-        &[style*="lightest"] {
-          button:hover {
+        // &[style*="lightest"] {
+        button {
+          height: 28px;
+          &:hover {
             background-color: $rc-theme-primary-2;
           }
+          &:first-child + .fn__space {
+            display: none;
+          }
         }
+        // }
       }
     }
   }
@@ -117,8 +132,8 @@
       border-bottom: 1px solid $rc-dialog-border;
       &.fn__none {
         display: block !important;
-        &::before{
-          content: '新建日记';
+        &::before {
+          content: "新建日记";
           display: block;
         }
         // + div[style*="height"] {
@@ -167,7 +182,9 @@
         width: 15px;
       }
       div[style*="var(--b3-border-color)"] {
-        background-color: $rc-dialog-border !important;
+        // background-color: $rc-dialog-border !important;
+        height: 0 !important;
+        border-bottom: 1px solid $rc-dialog-border;
       }
       .custom-attr__add {
         padding: 0;
@@ -208,6 +225,7 @@
     .b3-dialog__action {
       padding: 0;
       margin-bottom: 16px;
+      border: none;
       .fn__space {
         width: 2%;
       }
@@ -226,9 +244,10 @@
         }
         &.b3-button--cancel {
           color: $rc-theme-primary;
-          border: 1px solid $rc-theme-primary;
+          border: none;
+          background-color: $rc-theme-primary-1;
           &:hover {
-            background-color: $rc-button-cancel-hover;
+            background-color: $rc-theme-primary-2;
           }
         }
       }
@@ -246,43 +265,63 @@
 
 .search__header {
   border-radius: $rc-border-radius-large;
+  background-color: $rc-theme-surface-background;
+  border-color: $rc-border-color;
   .b3-text-field {
-    border: 1px solid $rc-border-color !important;
+    border: none !important;
     &:hover,
     &:focus {
-      border: 1px solid $rc-border-color !important;
+      border: none !important;
     }
   }
 }
 
-//集市图片
-.protyle-img {
-  //   left: 30px;
-  //   right: 30px;
-  //   top: 30px;
-  //   bottom: 30px;
-  .protyle-img__bar {
-    top: 40px;
-    right: 45px;
-    .b3-button {
+//集市Readme
+.config-bazaar__readme {
+  border-radius: $rc-dialog-radius;
+  .item__side {
+    background-color: $rc-theme-surface-background;
+    border-radius: $rc-border-radius-medium;
+    .b3-button[data-type="goBack"] {
+      border: none;
+      margin: 8px;
       color: $rc-theme-text-2;
-      background-color: $rc-theme-gray-3;
-      border: 1px solid transparent;
-      user-select: none;
+      padding: 8px;
       &:hover {
-        color: $rc-theme-text-2;
-        background-color: $rc-theme-gray-4 !important;
+        background-color: $rc-theme-gray-1;
       }
       svg {
-        width: 9px;
-        height: 9px;
-        margin-right: 4px;
+        width: 12px;
+        height: 12px;
+        transform: translateX(1px);
+      }
+    }
+    .item__nav {
+      width: auto;
+      margin: 12px 70px;
+      height: 24px;
+      line-height: 24px;
+      border-radius: $rc-border-radius-max;
+      box-shadow: #{fluent-shadow(2)};
+      border: 1px solid $rc-border-color;
+      font-size: 12px;
+      transform: translateX(-24px) translateY(0px);
+    }
+  }
+  .item__main {
+    border-radius: $rc-border-radius-medium;
+    background-color: $rc-theme-surface-background;
+    .item__preview {
+      // border-radius: $rc-border-radius-medium;
+      // border-bottom-left-radius: 0;
+      // border-bottom-right-radius: 0;
+      border-radius: unset;
+    }
+    .item__readme {
+      padding: 16px #{$content-margin} 235px !important;
+      code {
+        background-color: $rc-code-background;
       }
     }
   }
-  //   img {
-  //     width: 100%;
-  //     // height: 100%;
-  //     // transform: translate3d(0, 0, 0px) !important;
-  //   }
 }
