--- a/src/styles/components/surface/_input.scss
+++ b/src/styles/components/surface/_input.scss
@@ -2,9 +2,7 @@
 .b3-text-field {
   border: 1px solid transparent !important;
   border-radius: $rc-border-radius-small;
-  &.b3-text-field--small {
-    height: 24px;
-  }
+  box-shadow: none;
   &:not(.b3-text-field--small):not(.b3-text-field--text) {
     //:not(.b3-form__icon-input)
     background-color: $rc-theme-surface-control;
@@ -16,6 +14,15 @@
   &:focus {
     box-shadow: none;
     border: 1px solid $rc-theme-border-2 !important;
+  }
+
+  &.b3-text-field--small {
+    height: 24px;
+    &:hover,
+    &:focus {
+      border: 1px solid transparent !important;
+      box-shadow: #{fluent-shadow(4)};
+    }
   }
   // &:focus {
   //   box-shadow: 0 0 0 2px $rc-theme-gray-1;
