--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -14,9 +14,9 @@
 :root {
   // 主色
   --b3-theme-primary: #{$rc-theme-primary};
-  --b3-theme-primary-light: #{$rc-theme-primary-3};
-  --b3-theme-primary-lighter: #{$rc-theme-primary-2};
-  --b3-theme-primary-lightest: #{$rc-theme-primary-1};
+  --b3-theme-primary-light: #{$rc-theme-primary-light};
+  --b3-theme-primary-lighter: #{$rc-theme-primary-lighter};
+  --b3-theme-primary-lightest: #{$rc-theme-primary-lightest};
   --b3-theme-secondary: #f3a92f;
   --b3-theme-background: #{$rc-theme-background};
   --b3-theme-background-light: #{$rc-theme-background};
@@ -43,7 +43,8 @@
   --b3-font-family-graph: mononoki;
   --b3-font-family-emoji: "Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI",
     "Apple Color Emoji", "Twemoji Mozilla", "Noto Color Emoji", "Android Emoji";
-
+  --b3-font-family-math: KaTeX_Math;
+  
   // 线条
   --b3-border-color: #{$rc-theme-background};
 
@@ -172,7 +173,7 @@
 }
 
 //占位符
-@import "mixin"; 
+@import "mixin";
 //界面
 @import "components/surface";
 //编辑器
