--- a/src/styles/components/surface/_menu.scss
+++ b/src/styles/components/surface/_menu.scss
@@ -20,14 +20,14 @@
       }
     }
   }
-  // &.fn__none{
-  //   display: block !important;
-  //   opacity: 0;
-  //   transform: scale(0.95);
-  //   padding: 0;
-  // }
-  // transform: scale(1);
-  // transition: transform 0.1s ease-out;
+  &.fn__none {
+    display: block !important;
+    opacity: 0;
+    transform: scale(0.97);
+    padding: 0;
+  }
+  transform: scale(1);
+  transition: transform 0.15s ease-out;
 }
 
 //菜单
@@ -54,7 +54,7 @@
         height: 10px;
       }
     }
-    &:last-child{
+    &:last-child {
       margin-bottom: 0;
     }
   }
@@ -72,11 +72,13 @@
     // }
   }
   & &__submenu {
-    $sub-menu-vertical: 10px;
     @extend %menu__model;
-    margin-left: $sub-menu-vertical;
-    margin-right: $sub-menu-vertical;
     top: -9px;
+    opacity: 0;
+    display: block !important;
+    position: absolute;
+    left: 100%;
+    transform: scale(0.97);
     .b3-menu__item {
       .b3-menu__icon {
         transition: all 0.3s ease 0s;
@@ -123,4 +125,12 @@
   // button .fn__hr--small{
   //   display: none;
   // }
+
+  &__item--show &__submenu {
+    transform: scale(1);
+    opacity: 1;
+    $sub-menu-vertical: 10px;
+    margin-left: $sub-menu-vertical;
+    margin-right: $sub-menu-vertical;
+  }
 }
